homework3/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: homework3
        image: nikfedoseev/microservice-architecture-homeworks:homework3
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: api/healthcheck
            port: 8000
        readinessProbe:
          httpGet:
            path: api/healthcheck
            port: 8000
