homework3/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 8000
  type: NodePort
