homework3/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
        - pathType: Prefix
          path: /(.*)
          backend:
            service:
              name: api-service
              port:
                number: 9000
